<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/logo3"
        />

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#b0aaa9"
        android:paddingLeft="2dp"
        android:drawableLeft="@drawable/uname"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/edittext_conf_password"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#b0aaa9"
        android:drawableLeft="@drawable/pword"
        android:inputType="textPassword"
        android:hint="@string/password" />

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#b0aaa9"
        android:drawableLeft="@drawable/pword"
        android:inputType="textPassword"
        android:hint="@string/confirm_password" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ff6a26"
        android:clickable="true"
        android:text="@string/register"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="#ff0208"
            android:textSize="20dp"
            android:textStyle="italic"
            android:text="@string/already_registered" />

        <TextView
            android:id="@+id/textview_login"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#ff0208"
            android:clickable="true"
            android:text="@string/login"/>

    </LinearLayout>


</LinearLayout>